[package]
name = "my_smart_contract"
version = "0.1.0"
edition = "2021"
description = "Example template program written in Rust"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.3"
borsh-derive = "0.10.0"
solana-program = "~1.10.35"
getrandom = { version = "0.2.8", features = ["custom"] }
rand = "0.8"

[dev-dependencies]
solana-program-test = "~1.10.35"
solana-sdk = "~1.10.35"

[lib]
name = "my_smart_contract"
crate-type = ["cdylib", "lib"]
